# ap-companion-health-monitor-failsafe

./: .flake8  .gitignore  PROPOSAL_CONTEXT.md  README.md  companion-health.service  config.yaml.example  create_service.py  docker-compose.yml  health_monitor.py  pyproject.toml  requirements.txt
companion_health/: __init__.py  config.py  monitor.py  state.py
companion_health/backends/: __init__.py  base.py  generic.py  jetson.py  raspberry_pi.py
config/: jetson.yaml  raspberry_pi.yaml  sitl.yaml
deploy/: Dockerfile  install.sh
scripts/: build_pymavlink.sh  build_pymavlink_wheel.sh  forward_telemetry.py  health_and_forward.py  health_monitor.py  run.sh  setup.sh  sitl_health_test.py  sitl_test.py  telem_bridge.py  telem_forward.py
src/companion_health/: __init__.py  __main__.py  cli.py  config.py  mavlink.py  monitor.py  state.py
src/companion_health/backends/: __init__.py  base.py  generic.py  jetson.py  raspberry_pi.py
src/companion_health/services/: __init__.py  monitor.py
tests/: __init__.py  conftest.py  test_backends.py  test_config.py  test_failsafe.py  test_hw_failsafe.py  test_hw_health.py  test_sitl.py  test_state.py
tests/integration/: __init__.py  test_sitl.py
tests/unit/: __init__.py  test_backends.py  test_config.py  test_state.py
